; ModuleID = '/home/carl/AnghaBench/linux/crypto/extr_pcrypt.c_pcrypt_aead_dec.c'
source_filename = "/home/carl/AnghaBench/linux/crypto/extr_pcrypt.c_pcrypt_aead_dec.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.padata_priv = type { i32 }
%struct.pcrypt_request = type { i32 }
%struct.aead_request = type { i32 }

@EINPROGRESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.padata_priv*)* @pcrypt_aead_dec to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pcrypt_aead_dec(%struct.padata_priv* %0) #0 {
  %2 = alloca %struct.padata_priv*, align 8
  %3 = alloca %struct.pcrypt_request*, align 8
  %4 = alloca %struct.aead_request*, align 8
  store %struct.padata_priv* %0, %struct.padata_priv** %2, align 8
  %5 = load %struct.padata_priv*, %struct.padata_priv** %2, align 8
  %6 = call %struct.pcrypt_request* @pcrypt_padata_request(%struct.padata_priv* %5)
  store %struct.pcrypt_request* %6, %struct.pcrypt_request** %3, align 8
  %7 = load %struct.pcrypt_request*, %struct.pcrypt_request** %3, align 8
  %8 = call %struct.aead_request* @pcrypt_request_ctx(%struct.pcrypt_request* %7)
  store %struct.aead_request* %8, %struct.aead_request** %4, align 8
  %9 = load %struct.aead_request*, %struct.aead_request** %4, align 8
  %10 = call i32 @crypto_aead_decrypt(%struct.aead_request* %9)
  %11 = load %struct.padata_priv*, %struct.padata_priv** %2, align 8
  %12 = getelementptr inbounds %struct.padata_priv, %struct.padata_priv* %11, i32 0, i32 0
  store i32 %10, i32* %12, align 4
  %13 = load %struct.padata_priv*, %struct.padata_priv** %2, align 8
  %14 = getelementptr inbounds %struct.padata_priv, %struct.padata_priv* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load i32, i32* @EINPROGRESS, align 4
  %17 = sub nsw i32 0, %16
  %18 = icmp eq i32 %15, %17
  br i1 %18, label %19, label %20

19:                                               ; preds = %1
  br label %23

20:                                               ; preds = %1
  %21 = load %struct.padata_priv*, %struct.padata_priv** %2, align 8
  %22 = call i32 @padata_do_serial(%struct.padata_priv* %21)
  br label %23

23:                                               ; preds = %20, %19
  ret void
}

declare dso_local %struct.pcrypt_request* @pcrypt_padata_request(%struct.padata_priv*) #1

declare dso_local %struct.aead_request* @pcrypt_request_ctx(%struct.pcrypt_request*) #1

declare dso_local i32 @crypto_aead_decrypt(%struct.aead_request*) #1

declare dso_local i32 @padata_do_serial(%struct.padata_priv*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
